--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </BR>
         <BR>
         </BR>
-        <img src="https://drive.google.com/file/d/1LB28rkJJZ09pw-CTcjK_Zb2MFqt87rCI/view?usp=drive_link" alt="Image accueil">
+        <img src="images 2 PORTFOLIO.png" alt="Image accueil">
       </div>
     </div>
   </section>
@@ -51,7 +51,7 @@
      <a href="https://drive.google.com/file/d/1SgzFgZmFBdFhU1j1VEz7_PzdxA97axNr/view?usp=drive_link" download class="btn">Télécharger mon CV</a>
       </div>
       <div>
-        <img src="https://drive.google.com/file/d/1qg6faeRelKdResUsurLuvRxoLgBDVX1R/view?usp=sharing" alt="Photo de profil" style="border-radius: 50px;">
+        <img src="ANDREA WEBDESIGN (1).png" alt="Photo de profil" style="border-radius: 50px;">
       </div>
     </div>
   </section>
