--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
           <div class="bar"><div class="bar-fill" style="width: 90%;"></div></div>
         </div>
         <div class="language">
+           <p>Language</p>
           <p>CSS</p>
           <div class="bar"><div class="bar-fill" style="width: 85%;"></div></div>
         </div>
