--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </BR>
         <BR>
         </BR>
-        <img src="images 2 PORTFOLIO.png" alt="Image accueil">
+        <img src="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\images 2 PORTFOLIO.png" alt="Image accueil">
       </div>
     </div>
   </section>
@@ -51,7 +51,7 @@
      <a href="https://drive.google.com/file/d/1SgzFgZmFBdFhU1j1VEz7_PzdxA97axNr/view?usp=drive_link" download class="btn">Télécharger mon CV</a>
       </div>
       <div>
-        <img src="ANDREA WEBDESIGN (1).png" alt="Photo de profil" style="border-radius: 50px;">
+        <img src="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\ANDREA WEBDESIGN (1).png" alt="Photo de profil" style="border-radius: 50px;">
       </div>
     </div>
   </section>
@@ -60,8 +60,11 @@
   <section id="competences" style="background-color: var(--bg-light);">
     <h2>Mes compétences</h2>
     <div class="two-columns">
+      <!-- language -->
       <div class="skills">
+      
         <div class="skill">
+          <h2>skills</h2 style="color:#8a2a6a;">
           <p>Gestion de projet</p>
           <div class="bar"><div class="bar-fill" style="width: 80%;"></div></div>
         </div>
@@ -78,19 +81,23 @@
           <div class="bar"><div class="bar-fill" style="width: 75%;"></div></div>
         </div>
       </div>
+      <!-- language -->
       <div class="languages">
         <div class="language">
+           <h2>Languages/Logiciels</h2 style="color:#8a2a6a;">
           <p>HTML</p>
-          <div class="bar"><div class="bar-fill" style="width: 90%;"></div></div>
+          <div class="bar"><div class="bar-fill" style="width: 80%;"></div></div>
         </div>
         <div class="language">
-           <p>Language</p>
           <p>CSS</p>
-          <div class="bar"><div class="bar-fill" style="width: 85%;"></div></div>
+          <div class="bar"><div class="bar-fill" style="width: 55%;"></div></div>
         </div>
         <div class="language">
           <p>JavaScript</p>
-          <div class="bar"><div class="bar-fill" style="width: 70%;"></div></div>
+          <div class="bar"><div class="bar-fill" style="width: 50%;"></div></div>
+          <div class="language">
+          <p>Visual studio</p>
+          <div class="bar"><div class="bar-fill" style="width: 60%;"></div></div>
         </div>
       </div>
     </div>
@@ -107,7 +114,7 @@
         <p>Un programme qui demande l'âge de l'utilisateur et affiche s'il est majeur ou mineur.</p> 
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\TEST PROJET\quel est votre age.html" class="btn">voir plus</a>
+        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\quel est votre age.html" class="btn">voir plus</a>
       </div>
         <!-- jeu nombre -->
       <div class="project">
@@ -115,7 +122,7 @@
         <p>Un programme qui détermine si un nombre est pair ou impair.</p>
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\TEST PROJET\ENTRER UN MONBRE.html" class="btn">Voir plus</a>
+        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\ENTRER UN MONBRE.html" class="btn">Voir plus</a>
       </div>
       <!-- jeu mois -->
       <div class="project">
@@ -123,7 +130,7 @@
         <p>Un programme qui affiche le mois à partir du numéro saisi.</p>
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\TEST PROJET\mois actuel.html" class="btn">Voir plus</a>
+        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\mois actuel.html" class="btn">Voir plus</a>
       </div>
     </div>
   </section>
