--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </BR>
         <BR>
         </BR>
-        <img src="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\images 2 PORTFOLIO.png" alt="Image accueil">
+        <img src="images 2 PORTFOLIO.png" alt="Image accueil">
       </div>
     </div>
   </section>
@@ -48,10 +48,10 @@
       <div>
         <p>Je suis Andrea Avi, créatif, curieuse et passionnée. Ma mission : concevoir des interfaces esthétiques, modernes et adaptées aux besoins de chaque utilisateur. Besoin d’un esprit design et technique ? Je suis la personne qu’il vous faut.</p>
         <br>
-     <a href="https://drive.google.com/file/d/1SgzFgZmFBdFhU1j1VEz7_PzdxA97axNr/view?usp=drive_link" download class="btn">Télécharger mon CV</a>
+     <a href="CV ANDREA AVI.pdf" download class="btn">Télécharger mon CV</a>
       </div>
       <div>
-        <img src="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\ANDREA WEBDESIGN (1).png" alt="Photo de profil" style="border-radius: 50px;">
+        <img src="ANDREA WEBDESIGN (1).png" alt="Photo de profil" style="border-radius: 50px;">
       </div>
     </div>
   </section>
@@ -114,7 +114,7 @@
         <p>Un programme qui demande l'âge de l'utilisateur et affiche s'il est majeur ou mineur.</p> 
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\quel est votre age.html" class="btn">voir plus</a>
+        <a href="quel est votre age.html" class="btn">voir plus</a>
       </div>
         <!-- jeu nombre -->
       <div class="project">
@@ -122,7 +122,7 @@
         <p>Un programme qui détermine si un nombre est pair ou impair.</p>
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\ENTRER UN MONBRE.html" class="btn">Voir plus</a>
+        <a href="ENTRER UN MONBRE.html" class="btn">Voir plus</a>
       </div>
       <!-- jeu mois -->
       <div class="project">
@@ -130,7 +130,7 @@
         <p>Un programme qui affiche le mois à partir du numéro saisi.</p>
         <BR>
         </BR>
-        <a href="C:\Users\Lenovo\OneDrive\Bureau\EXERCICE 1\PORTFOLIO\PORTFOLIO SITE WEB\mois actuel.html" class="btn">Voir plus</a>
+        <a href="mois actuel.html" class="btn">Voir plus</a>
       </div>
     </div>
   </section>
