--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">   
 </head>
+  <script>
+function openSidebar() {
+  document.getElementById("sidebar").style.width = "250px";
+}
+
+function closeSidebar() {
+  document.getElementById("sidebar").style.width = "0";
+}
+</script>
 <body>
   <header>
     <div style="padding-left: 80px;">
