--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@ function closeSidebar() {
       <a href="#competences">Mes compétences</a>
       <a href="#contact">Contact</a>
     </nav>
+    <!-- Bouton Burger -->
+<div id="burger" onclick="openSidebar()">☰</div>
+
+<!-- Menu Latéral -->
+<div id="sidebar">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">×</a>
+  <a href="#accueil">Accueil</a>
+  <a href="#a-propos">À propos</a>
+  <a href="#projets">Mes projets</a>
+  <a href="#competences">Mes compétences</a>
+  <a href="#contact">Contact</a>
+</div>
   </header>
 
   <!-- SECTION ACCUEIL -->
