--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function closeSidebar() {
   </header>
 
   <!-- SECTION ACCUEIL -->
-  <section id="accueil" style="background-color: var(--bg-light);">
+  <section id="accueil" style="background-color: var(--bg-light);" class="flex-2col">
     <BR>
     <div class="two-columns">
       <div>
@@ -66,7 +66,7 @@ function closeSidebar() {
   </section>
 
   <!-- SECTION A PROPOS -->
-  <section id="apropos" style="background-color: var(--bg-very-light);">
+  <section id="apropos" style="background-color: var(--bg-very-light);" class="flex-2col">
     <h2>À propos</h2>
     <div class="two-columns">
       <div>
@@ -81,7 +81,7 @@ function closeSidebar() {
   </section>
 
   <!-- SECTION MES COMPETENCES -->
-  <section id="competences" style="background-color: var(--bg-light);">
+  <section id="competences" style="background-color: var(--bg-light);" class="flex-2col">
     <h2>Mes compétences</h2>
     <div class="two-columns">
       <!-- language -->
